@@ -82,6 +82,7 @@ variables:
 	one_dmn_rec_var_dbl=1,2,3,4,5,6,7,8,9,10;
 	station = 1,2;
 	time=1.,2.,3.,4.,5.,6.,7.,8.,9.,10.;
+	time_bnds=0.5,1.5,1.5,2.5,2.5,3.5,3.5,4.5,4.5,5.5,5.5,6.5,6.5,7.5,7.5,8.5,8.5,9.5,9.5,10.5;
         stn_tm_val={1.,1.,1.,1.,1.,1.,1.,1.,1.,1.},
                    {2.,2.,2.,2.,2.,2.,2.,2.,2.,2.};
 
